<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/updateUsernameForm"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/change_your_username"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_new_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newUsernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        app:helperText="@string/required"
        app:errorEnabled="true"
        android:layout_marginTop="20dp"
        app:helperTextTextColor="#ff0000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newUsernameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changeUsernameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/primary"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white" />

</LinearLayout>

