<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/container"
    tools:context=".ui.PublicProfile.PublicProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/publicViewCard"
        app:layout_constraintTop_toBottomOf="@+id/PublicViewCard">

        <TextView
            android:id="@+id/userdisplayNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:singleLine="true"
            android:text="@{userinfo.displayName}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/publicUserCardView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/publicUserCardView"
            app:layout_constraintTop_toBottomOf="@+id/publicUserCardView"
            tools:text="Display name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/publicUserCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/publicProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/editTextNumberPosts"
            android:layout_width="77dp"
            android:layout_height="51dp"
            android:ems="10"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:id="@+id/editTextNumberFollowers"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:ems="10"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="344dp"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:id="@+id/editTextNumberFollowing"
            android:layout_width="75dp"
            android:layout_height="51dp"
            android:ems="10"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="467dp"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="78dp"
            android:layout_height="31dp"
            android:text="@string/posts"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="76dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="78dp"
            android:layout_height="30dp"
            android:text="@string/followers"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="344dp"
            tools:layout_editor_absoluteY="76dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="76dp"
            android:layout_height="31dp"
            android:text="@string/following"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="467dp"
            tools:layout_editor_absoluteY="76dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="147dp"
            android:layout_height="37dp"
            android:text="@string/follow"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="256dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="133dp"
            android:layout_height="37dp"
            android:backgroundTint="@color/red"
            android:text="@string/unfollow"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="424dp"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="128dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/publicDescription"
            android:layout_width="252dp"
            android:layout_height="99dp"
            tools:layout_editor_absoluteX="305dp"
            tools:layout_editor_absoluteY="127dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMusee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:background="@color/container"
        android:orientation="horizontal">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>