<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home_theme"
    android:orientation="horizontal"
    tools:context=".ui.home.fragments.accountParameter.UserProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/parametredecompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/compte_parameter"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/myPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/primary"
            android:text="My Profile"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/modifyprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/primary"
            android:text="@string/privacy_safety"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/primary"
            android:text="@string/history_log"
            android:textSize="20sp" />

        <TextView
        android:id="@+id/stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/primary"
        android:text="Statistics"
        android:textSize="20sp" />



    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newLayout"
        android:layout_margin="20dp"
        android:background="@color/mainTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>